J_0_test/old/mconf_matlab.h

//typedef __int64 MC_HANDLE;  // for 64-bit architecture
typedef unsigned long long int  MC_HANDLE;
typedef unsigned int  MC_HANDLE;  // for 32-bit architecture
typedef unsigned int  MC_HANDLE;  // for 32-bit architecture
  /// The function loads the magnetic configuration stored in the file \b fname.
  /// The function recognizes the format of the file by analyzing its contents;
  /// bc-, bc-binary-, LHD- and VMEC(wout, version>=6.20)-format are supported.
  /// For bc-format see \ref W7X_Format "W7-X format".
  /// On exit the function returns the handle of the object, that holds magnetic configuration.
  /// @param[in] fname is the name of the file to load.
  /// @return  if the function succeeds, the return value is \b non-zero, \b zero otherwise.
  /// \sa the detailed description of CStconfig::load()
  WINDLLEXPORT MC_HANDLE MCload      (char * fname);
  /// Free all memory used.
  /// The function works as a C++ destructor.
  /// @param[in] mConf is the handle of the magnetic configuration to be released.
  WINDLLEXPORT void   MCfree  (MC_HANDLE mConf);
  /// Get the B<SUB>00</SUB> value of the magnetic field on axis.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @return the B<SUB>00</SUB> value of the magnetic field on magnetic axis.
  WINDLLEXPORT double MCgetB00(MC_HANDLE mConf);
  /// Get the value of the magnetic field on axis at cylindrical angle.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] ficyl is the value[radians] of cylindrical angle.
  /// @return the value of the magnetic field on magnetic axis at cylindrical angle \e ficyl.
  WINDLLEXPORT double MCgetB0 (MC_HANDLE mConf,double ficyl);
  /// The function returns effective radius in [m].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  WINDLLEXPORT double MCreff (MC_HANDLE mConf,double s);
  /// The function returns V'(s) = dVolume/ds in [m^3].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  /// \note V' is negative if (s,theta,phi)-coordinate system is left handed
  WINDLLEXPORT double MCVprime(MC_HANDLE mConf,double s);
  /// The function returns plasma volume V(s) in [m^3].
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] s is the normalized toroidal flux.
  /// \note Volume is negative if (s,theta,phi)-coordinate system is left handed
  WINDLLEXPORT double MCVolume(MC_HANDLE mConf,double s);
  /// The function returns cartesian B-vector.
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in] xyz is the cartesian coordinates
  /// @param[out] B is the cartesian B-field vector
  /// @return \b s (normalized toroidal flux), which normally must satisfy \b 0<=s<=1; \n
  /// <b>1<s<sMax</b> means that the point lies in the extrapolated region,
  ///    retuned parameters are not reliable here\n
  WINDLLEXPORT double MCgetBxyz(MC_HANDLE mConf,const double *xyz,double *B);
  
  /// The function returns the normalized poloidal flux, where s is the normalized toroidal flux.
  WINDLLEXPORT double MCtorFlux2polFlux(MC_HANDLE mConf,double s);
  /// The method returns the poloidal current in [A].
  /// @param s is the normalized toroidal flux.
  WINDLLEXPORT double MCIp    (MC_HANDLE mConf,double s);   // poloidal current [A]
  //*********************************************************************
  /// The method returns the effective helical ripple for \f$1/\nu\f$ transport.  
  /// \sa V.V.Nemov, S.V.Kasilov, W. Kernbichler, and M.F.Heyn, Physics of Plasmas, vol. 6, 4622(1999),
  ///   http://link.aip.org/link/PHPAEN/v6/i12/p4622/s1 
  /// \sa 28th EPS, http://epsppd.epfl.ch/Madeira/html/pdf/P5.055.pdf , EGA Vol.25A (2001) 1985-1988
  /// @param[in] mConf is the handle of the magnetic configuration.
  /// @param[in]  s is the normalized toroidal flux
  /// @return  eps_eff  using VMEC definition of minor radius r=a*sqrt(s),
  WINDLLEXPORT double MCepsEff(MC_HANDLE mConf,double s);